# gateway

./: .gitignore  Cargo.toml  api.toml
src/: authako.rs  error.rs  http_404.rs  loger.rs  main.rs  preserver.rs  register.rs
src/config/: mod.rs  ssl.rs
src/routes/: join.rs  mod.rs  oauth.rs  seission.rs
src/util/: lgerror.rs  lgvalue.rs  mod.rs
templates/: 404.stpl  head.stpl  join.stpl  login.stpl
