[package]
name = "user-man"
version = "0.1.0"
authors = ["sohayl chahmot <chahmot.s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.2"
actix-web = { version = "3", features = ["openssl"] }
openssl = "0.10"
futures = "0.3"
actix-http = "2.2.0"
actix-service = "1"
sailfish = "0.3.1"
sailfish-macros = "0.3.1"
dotenv = "0.15.0"
config = "0.10.1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
futures-util = { version = "0.3.4", default-features = false }
serde_json = "1.0"
time = { version = "0.2.7", default-features = false, features = ["std"] }
uuid = { version = "0.8", features = ["v4"] }
cookie = { version = "0.14", default-features = false, features = ["signed", "key-expansion"] }
lazy_static = "1.4.0"
rand = "0.8"
bcrypt = "0.9"

[dependencies.mongodb]
version = "1.2"
default-features = false
features = ["tokio-runtime"]

[features]
join = []
oauth = []
