[package]
name = "larache-gateway"
version = "0.1.0"
authors = ["sohayl chahmot <chahmot.s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.2"
actix-web = { version = "3.3.2", features = ["openssl"] }
openssl = "0.10"
futures = "0.3"
actix-http = "2.2.0"
actix-service = "1"
sailfish = "0.3.1"
sailfish-macros = "0.3.1"
dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.2.7", default-features = false, features = ["std"] }
uuid = { version = "0.8", features = ["v4"] }
cookie = { version = "0.14", default-features = false, features = ["signed", "key-expansion"] }
rand = "0.8"
bcrypt = "0.9"
validator = { version = "0.12", features = ["derive"] }
toml = "0.5"
awc = "2.0"
rmp-serde = "0.15"
bitflags = "1.3"
forwarded = { path = "../forwarded"}
cll = { path = "../cll"}
pin-project-lite = "0.2"

[dependencies.mongodb]
version = "1.2"
default-features = false
features = ["tokio-runtime"]

[features]
oauth = []
join = []
default = ["join"]
